styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0px;
  padding: 0px;
}

html {
  font-size: 18px;
  --appFrameBgColor: rgb(26, 26, 26);
  --inputBgColor: #292727;
  --inputLabelColor: #aca3a3;
  --locked: #fa8484;
  --unlocked: #bdbdbd;
}

body {
  overflow-x: hidden;
  background: #000000;
  font-family: 'Kanit', sans-serif;
  display: flex;
  flex-direction: column;
  color: #eee3e3;
}

button {
  border-radius: 0.3rem;
  border-style: none;
}

/*---------------------------------------------Smaller Screen---------------------------------------*/
header {
  display: flex;
  justify-content: space-between;
}

#logo {
  height: 2.1rem;
  margin: 0.3rem 0.6em;
}

nav {
  font-size: 1.3rem;
  font-weight: 900;
}

.nav-ul {
  display: flex;
  list-style: none;
  margin: 0.3rem;
  padding: 0px;
  align-items: center;
}

.nav-link {
  margin-inline: 0.6em 0.3em;
  text-decoration: none;
  color: #eee3e3;
}

/* --------------------- Main Content --------------------- */
main {
  font-size: 0.8rem;
}

#appFrame {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 100%;
  margin: 0;
  height: auto;
  align-self: center;
  background-color: var(--appFrameBgColor);
  border-radius: 1rem;
}

h1 {
  margin: 0.9rem;
  text-align: center;
}

/*-------------- History --------------*/

#historyBtn {
  position: absolute;
  right: 0.9em;
  top: 0.9em;
  display: inline-block;
  height: 24px;
  width: 24px;
  border-radius: 3px;
  background: #00000000;
}

.history-icon {
  fill: #eee3e3;
}

#history-container {
  position: absolute;
  display: flex;
  flex-direction: column;
  min-height: 100%;
  width: 100%;
  background-color: var(--inputBgColor);
  padding: 0.9rem;
  color: #eee3e3;
  font-size: 1.2rem;
  z-index: 3;
}

.close-clearHistory_cont {
  display: flex;
  justify-content: space-between;
}

#clear-history {
  width: fit-content;
}

.history-item {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 0.3rem 0.9rem;
  font-size: 18px;
  color: #eee3e3;
  border-bottom: 1px solid #eee3e3;
}

/*-------------------Currency Selectors---------------*/
#currencySelectors_Container {
  display: flex;
  margin-inline: 0.9rem;
  justify-content: space-between;
  font-size: clamp(9px, 2.5vw, 15px);
}

.currencyType-container {
  display: flex;
  align-items: center;
}

.currencySelector-title {
  margin-right: 0.3rem;
}

.currencySelector-container {
  position: relative;
  display: inline-block;
  margin-inline: 0.2rem;
  bottom: 0;
  width: 30px;
  height: 15px;
}

.currency-switchInput {
  opacity: 0;
  width: 0;
  height: 0;
}

.currency-slider {
  position: absolute;
  cursor: pointer;
  border-radius: 34px;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgb(149, 224, 168);
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.currency-slider:before {
  position: absolute;
  content: "";
  height: 13px;
  width: 13px;
  border-radius: 50%;
  left: 1px;
  bottom: 1px;
  background-color: rgb(58, 58, 58);
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.currency-switchInput:checked + .currency-slider {
  background-color: #f7e792;
}

.currency-switchInput:focus + .currency-slider {
  box-shadow: 0 0 1px #2196F3;
}

.currency-switchInput:checked + .currency-slider:before {
  -webkit-transform: translateX(15px);
  -ms-transform: translateX(15px);
  transform: translateX(15px);
}

/*-----------------Position Inputs-----------------*/

.section-container {
  display: flex;
  flex-direction: column;
  margin: 0.9rem;
}

.input-container {
  position: relative;
  margin: 0.6em 0 0 0;
  background-color: var(--inputBgColor);
  border-radius: 0.27rem;
  border: 1px solid var(--inputBgColor);
  align-items: left;
}

.input-label {
  background-color: var(--inputBgColor);
  height: 1.2rem;
  border-radius: 0.25rem;
  margin: 0 0 0.6em 0.3em;
  color: var(--inputLabelColor);
  font-size: 1.2rem;
  font-weight: 600;
}

/*-----------------Lock Input-----------------*/
.percentage-amount-lockContainer{
  position: relative;
  margin-left: auto;
  top: -4px;
}

.percentage-amount-lockContainer::before{
  content: '';
  position: absolute;
  top: 1px;
  right: 0px;
  width: 3px;
  height: 33px;
  background-color: var(--inputBgColor);
  z-index: 1;
}

.lock-box {
  position: absolute;
  right: 0.6em;
  top: 0.6em;
  display: flex;
  flex-direction: column;
  margin: auto;
  padding: 0;
}

.lock-btn {
  display: none;
  cursor: pointer;
  --webkite-user-select:none;
  --mos-user-select:none;
  --ms-user-select:none;
}

.lock-btn + label:before {
  content: '';
  display: block;
  width: 0.9em;
  height: 0.6em;
  border-style: solid;
  border-radius: 15px 15px 0 0;
  border-color: var(--unlocked);
  border-width: 2px 2px 0 2px;
  transform-origin: 1px;
  transform: rotateY(180deg);
  transition: all 0.3s;
}

.lock-btn + label:after {
  content: '';
  display: inline-block;
  vertical-align: top;
  width: 0.9em;
  height: 0.6em;
  background: var(--unlocked);
  position: relative;
  transition: all 0.3s;
}

.lock-btn:checked + label:before {
  border-color: var(--locked);
  transform-origin: -12px 10%;
  transform: rotateY(0deg);
}

.lock-btn:checked + label:after {
  background: var(--locked);
}

.input-span {
  display: flex;
  background-color: var(--inputBgColor);
  width: 100%;
  height: 1.8rem;
  border-radius: 0.25rem;
  padding-right: 0.2em;
  justify-content: space-between;
}

.input-field, .output-field {
  width: 100%;
  background-color: var(--inputBgColor);
  border-style: none;
  outline: none;
  border-radius: 0.25rem;
  padding-right: 0.2em;
  color: rgb(255, 253, 253);
  text-align: end;
  font-size: 1.2rem;
}

.input-field::-webkit-outer-spin-button,
.input-field::-webkit-inner-spin-button,
.output-field::-webkit-outer-spin-button,
.output-field::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type=number] {
  appearance: textfield;
  -moz-appearance: textfield;
}

.locked, .locked > label, .locked > .input-span > button, .locked > .input-span > input, .locked > .input-span {
  background-color: var(--appFrameBgColor);
}

.output-label {
  font-size: 1rem;
  margin: 0.3rem 0 auto 0.3em;
}

.copy-btn {
  background-color: var(--inputBgColor);
  margin-left: 0.3rem;
}

.copy-icon {
  fill: #dddddd;
  padding: 0;
  width: 1em;
  height: fit-content;
  font-size: 1.2rem;
}

.copy-success {
  position: absolute;
  top: 42%;
  left: calc(50% - 3ch);
  background-color: #eee3e3;
  color: var(--inputBgColor);
  font-size: 1.2rem;
  font-weight: 600;
  margin: 0.3rem 0 0.3rem 0.3rem;
  padding: 0 3px;
  outline: none;
  width: fit-content;
  height: 1.8rem;
  border-radius: 0.25rem;
  text-align: center;
  align-self: center;
}

input+.copyBtn {
  background-color: rgb(26, 26, 26);
}

.symbol {
  margin-right: 0.2em;
  font-size: 1.5em;
}

/*------------------------------- After calculation actions--------------------------*/

.after-calc-actions {
  display: flex;
  padding: 0.9rem;
  justify-content: space-between;
}

.after-calcBtn {
  padding: 0.3rem 0.6em;
  border-radius: 0.3rem;
  border: none;
  font-size: 1.08em;
}

#delete {
  background-color: rgb(202, 78, 78);
  margin-right: 0.6em;
}

#clear-all {
  margin-right: auto;
  background-color: rgb(221, 221, 221);
}

#clear-position {
  background-color: rgb(221, 199, 127);
}

#save-position {
  margin-left: 0.6em;
  background-color: rgb(0, 158, 150);
}

/*--------------------------------------------Bigger Screen-----------------------------------------*/
@media (min-width: 769px) {
  #appFrame {
    width: 39em;
    margin: 0 auto;
  }
}

/*---------------Intro/ Article-------------------------------------------*/
#intro {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#title {
  align-self: center;
  font-size: 1.8rem;
}

#slogan {
  align-self: center;
  font-size: 1.5rem;
}

article {
  color: rgb(221, 221, 221);
  padding: 0.9rem;
  font-size: 1.2rem;
}

/*end of Stylesheet*/

